--- a/linear-network-delay-ts-train-service-022622.yaml
+++ b/linear-network-delay-ts-train-service-022622.yaml
@@ -1,568 +1,596 @@
 apiVersion: chaos-mesh.org/v1alpha1
 kind: Workflow
 metadata:
-  namespace: alms
-  name: linear-network-loss-userapi
+  namespace: default
+  name: linear-network-delay-ts-train-service-022622
 spec:
   entry: entry
   templates:
   - name: entry
     templateType: Serial
-    deadline: 2h30m
+    deadline: 4h
     children:
     - suspending1
-    - 20-loss
-    - 25-loss
-    - 30-loss
-    - 35-loss
-    - 40-loss
-    - 45-loss
-    - 50-loss
-    - 55-loss
-    - 60-loss
-    - 65-loss
-    - 70-loss
-    - 75-loss
-    - 80-loss
-    - 85-loss
-    - 90-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
-    - 95-loss
+    - suspending2
+    - 1000ms-delay
+    - 2000ms-delay
+    - 3000ms-delay
+    - 4000ms-delay
+    - 5000ms-delay
+    - 6000ms-delay
+    - 7000ms-delay
+    - 8000ms-delay
+    - 9000ms-delay
+    - 10000ms-delay
+    - 11000ms-delay
+    - 12000ms-delay
+    - 13000ms-delay
+    - 14000ms-delay
+    - 15000ms-delay
+    - 16000ms-delay
+    - 17000ms-delay
+    - 18000ms-delay
+    - 19000ms-delay
+    - 20000ms-delay
+    - 21000ms-delay
+    - 22000ms-delay
+    - 23000ms-delay
+    - 24000ms-delay
   - name: suspending1
     templateType: Suspend
-    deadline: 30m
-  - name: 20-loss
+    deadline: 1h
+  - name: suspending2
+    templateType: Suspend
+    deadline: 1h
+  - name: 1000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '20'
+      action: delay
+      delay:
+        latency: 1000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 25-loss
+  - name: 2000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '25'
+      action: delay
+      delay:
+        latency: 2000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 30-loss
+  - name: 3000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '30'
+      action: delay
+      delay:
+        latency: 3000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 35-loss
+  - name: 4000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '35'
+      action: delay
+      delay:
+        latency: 4000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 40-loss
+  - name: 5000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '40'
+      action: delay
+      delay:
+        latency: 5000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 45-loss
+  - name: 6000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '45'
+      action: delay
+      delay:
+        latency: 6000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 50-loss
+  - name: 7000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '50'
+      action: delay
+      delay:
+        latency: 7000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 55-loss
+  - name: 8000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '55'
+      action: delay
+      delay:
+        latency: 8000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 60-loss
+  - name: 9000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '60'
+      action: delay
+      delay:
+        latency: 9000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 65-loss
+  - name: 10000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '65'
+      action: delay
+      delay:
+        latency: 10000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 70-loss
+  - name: 11000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '70'
+      action: delay
+      delay:
+        latency: 11000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 75-loss
+  - name: 12000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '75'
+      action: delay
+      delay:
+        latency: 12000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 80-loss
+  - name: 13000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '80'
+      action: delay
+      delay:
+        latency: 13000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 85-loss
+  - name: 14000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '85'
+      action: delay
+      delay:
+        latency: 14000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 90-loss
+  - name: 15000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '90'
+      action: delay
+      delay:
+        latency: 15000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 16000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 16000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 17000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 17000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 18000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 18000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 19000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 19000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 20000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 20000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 21000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 21000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 22000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 22000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 23000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 23000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
-  - name: 95-loss
+  - name: 24000ms-delay
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
       selector:
         namespaces:
-        - alms
+        - default
         labelSelectors:
-          app.kubernetes.io/name: userapi
+          app: ts-train-service
         podPhaseSelectors:
         - Running
       mode: all
-      action: loss
-      loss:
-        loss: '95'
+      action: delay
+      delay:
+        latency: 24000ms
         correlation: '0'
-      direction: to
+        jitter: 0ms
+      direction: both
       target:
         selector:
           namespaces:
-          - alms
+          - default
         mode: all
